Form (non-styled) added

--- a/index.html
+++ b/index.html
@@ -278,7 +278,11 @@
         <section>
             <div class="subscribe center">
                 <div class="subscribe__item">
-                    <img src="img/subscribe__img.png" alt="subscribe__img" />
+                    <img
+                        class="subscribe__image"
+                        ="img/subscribe__img.png"
+                        alt="subscribe__img"
+                    />
                     <p class="subscribe__icontext">
                         “Vestibulum quis porttitor dui! Quisque viverra nunc mi,
                         a pulvinar purus condimentum“
