--- a/index-big.html
+++ b/index-big.html
@@ -11,6 +11,12 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
+            rel="stylesheet"
+        />
     </head>
 
     <body>
@@ -25,13 +31,82 @@
                     </a>
                 </div>
                 <div class="nav__right parent__info">
-                    <a class="nav__righticons" href="#">
+                    <details>
+                        <summary>
+                            <div class="datails__box">
+                                <h2 class="topmenu">MENU</h2>
+                                <ul>
+                                    <li class="topmenu__person">
+                                        <a href="#">MAN</a>
+                                        <ul>
+                                            <li class="topmenu__item">
+                                                <a href="#">Accessories</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Bags</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Denim</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">T-Shirts</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="topmenu__person">
+                                        <a href="#">WOMAN</a>
+                                        <ul>
+                                            <li class="topmenu__item">
+                                                <a href="#">Accessories</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Jackets & Coats</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Polos</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">T-Shirts</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Shirts</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="topmenu__person">
+                                        <a href="#">KIDS</a>
+                                        <ul>
+                                            <li class="topmenu__item">
+                                                <a href="#">Accessories</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Jackets & Coats</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Polos</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">T-Shirts</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Shirts</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Bags</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        </summary>
+                    </details>
+                    <!-- <a class="nav__righticons" href="#">
                         <img
                             class="nav__righticons"
                             src="img/nav_right_icon01.svg"
                             alt="nav_right_icon01"
                         />
-                    </a>
+                    </a> -->
                     <a class="nav__righticons" href="#">
                         <img
                             class="nav__righticons hidemobile"
