--- a/index-broken.html
+++ b/index-broken.html
@@ -11,12 +11,18 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
+            rel="stylesheet"
+        />
     </head>
 
     <body>
         <div class="nav">
             <div class="nav__container center">
-                <div class="nav__left">
+                <div class="nav__left fb">
                     <a class="nav__lefticons" href="#">
                         <img src="img/nav_left_logo.png" alt="nav_left_logo" />
                     </a>
@@ -24,28 +30,102 @@
                         <img src="img/nav_left_icon.svg" alt="nav_left_icon" />
                     </a>
                 </div>
-                <div class="nav__right parent__info">
-                    <a class="nav__righticons" href="#">
-                        <img
-                            class="nav__righticons"
-                            src="img/nav_right_icon01.svg"
-                            alt="nav_right_icon01"
-                        />
-                    </a>
-                    <a class="nav__righticons" href="#">
-                        <img
-                            class="nav__righticons hidemobile"
-                            src="img/nav_right_icon02.svg"
-                            alt="nav_right_icon02"
-                        />
-                    </a>
-                    <a class="nav__righticons info hidemobile" href="#">
-                        <img
-                            class="nav__righticons"
-                            src="img/nav_right_icon03.svg"
-                            alt="nav_right_icon03"
-                        />
-                    </a>
+                <div class="nav__right">
+                    <div class="nav__rightitem burger">
+                        <details>
+                            <summary>
+                                <img
+                                    class="nav__righticons"
+                                    src="img/nav_right_icon01.svg"
+                                    alt="nav_right_icon01"
+                                />
+                                <p class="summary__text topmenu">MENU</p>
+                            </summary>
+                            <div class="datails__box">
+                                <!-- <h2 class="topmenu">MENU</h2> -->
+                                <ul>
+                                    <li class="topmenu__person">
+                                        <a href="#">MAN</a>
+                                        <ul>
+                                            <li class="topmenu__item">
+                                                <a href="#">Accessories</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Bags</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Denim</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">T-Shirts</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="topmenu__person">
+                                        <a href="#">WOMAN</a>
+                                        <ul>
+                                            <li class="topmenu__item">
+                                                <a href="#">Accessories</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Jackets & Coats</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Polos</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">T-Shirts</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Shirts</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="topmenu__person">
+                                        <a href="#">KIDS</a>
+                                        <ul>
+                                            <li class="topmenu__item">
+                                                <a href="#">Accessories</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Jackets & Coats</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Polos</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">T-Shirts</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Shirts</a>
+                                            </li>
+                                            <li class="topmenu__item">
+                                                <a href="#">Bags</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        </details>
+                    </div>
+                    <div class="nav__rightitem">
+                        <a class="nav__righticons" href="#">
+                            <img
+                                class="nav__righticons hidemobile"
+                                src="img/nav_right_icon02.svg"
+                                alt="nav_right_icon02"
+                            />
+                        </a>
+                    </div>
+                    <div class="nav__rightitem parent__info">
+                        <a class="nav__righticons" href="#">
+                            <img
+                                class="nav__righticons hidemobile"
+                                src="img/nav_right_icon03.svg"
+                                alt="nav_right_icon02"
+                            />
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
